UI/UX Internship form Completed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="/" class="text-white font-bold hover:text-yellow-400">HOME</a>
         </li>
         <li>
-          <a href="/services" class="text-white font-bold hover:text-yellow-400">SERVICES</a>
+          <a href="/service.html" class="text-white font-bold hover:text-yellow-400">SERVICES</a>
         </li>
         <li>
           <a href="/training.html" class="text-white font-bold hover:text-yellow-400">TRAINING</a>
