--- a/service.html
+++ b/service.html
@@ -25,7 +25,7 @@
                     <a href="/" class="text-white font-bold hover:text-yellow-400">HOME</a>
                 </li>
                 <li>
-                    <a href="/services" class="text-white font-bold hover:text-yellow-400">SERVICES</a>
+                    <a href="/service.html" class="text-white font-bold hover:text-yellow-400">SERVICES</a>
                 </li>
                 <li>
                     <a href="/training.html" class="text-white font-bold hover:text-yellow-400">TRAINING</a>
@@ -238,9 +238,7 @@
     <!-- FOOTER SECTION -->
     <footer class="text-white py-10">
         <!-- First Row - Logo -->
-        <div class="flex justify-center mb-8">
-            <img src="../../assets/footer.png" alt="GenexCorp Logo" class="w-[950px]" />
-        </div>
+        
 
         <!-- Second Row - Footer Information -->
         <div class="grid text-black grid-cols-1 md:grid-cols-3 gap-8 px-5 md:px-20">
