--- a/training.html
+++ b/training.html
@@ -22,7 +22,7 @@
           </a>
         </li>
         <li>
-          <a href="/services" class="text-white font-bold hover:text-yellow-400">
+          <a href="/service.html" class="text-white font-bold hover:text-yellow-400">
             SERVICES
           </a>
         </li>
@@ -85,10 +85,13 @@
       </ul>
     </div>
   </nav>
-
+ 
+  <!-- Home page Img Section -->
   <section class="bg-cover bg-center bg-no-repeat w-full h-screen overflow-x-hidden flex items-center"
   style="background-image: url('../../assets/homeimg.jpg');">
 </section>
+
+<!-- Internship Opportunities section -->
 
 <div class="min-h-screen bg-gray-100 flex flex-col items-center justify-center px-4 sm:px-6 lg:px-8">
      <!-- Central Heading -->
@@ -303,6 +306,8 @@
     </div>
 </div>
 
+<!-- UI/UX Internship form Section -->
+
 <div class="flex flex-col items-center py-10 px-4 md:px-10">
     <!-- Internship Card -->
     <div class="bg-white shadow-lg rounded-lg p-6 mb-6 w-full max-w-lg md:max-w-md">
@@ -363,9 +368,11 @@
         </p>
 
         <div class="text-center">
-            <button class="bg-gray-800 text-white py-2 px-4 rounded hover:bg-gray-500">
-                Apply
-            </button>
+            <a href="./applyingforintership.html">
+                <button  class="bg-gray-800 text-white py-2 px-4 rounded hover:bg-gray-500">
+                    Apply
+                </button>
+            </a>
         </div>
     </div>
 </div>
