--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Genex Website</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- For Font Awesome icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
     .hero-background {
       background-image: url("./assets//ofcimg2.jpg"); /* Replace with the correct path to your image */
