SAS internship and Apply Card Completed

--- a/training.html
+++ b/training.html
@@ -364,9 +364,11 @@
                             <span class="react-icon"><i class="fa fa-star"></i></span>
                         </div>
                     </div>
-                    <button class="text-white font-bold py-2 px-4 rounded-full bg-black hover:bg-gray-800 transition duration-300">
-                        View More
-                    </button>
+                    <a href="/sasclinicalinternsgip.html">
+                        <button class="text-white font-bold py-2 px-4 rounded-full bg-black hover:bg-gray-800 transition duration-300">
+                            View More
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
