--- a/aimlapplying.html
+++ b/aimlapplying.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Apply for UI/UX Internship</title>
+  <title>Apply for AL/ML Internship</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -71,10 +71,10 @@
     </div>
   </nav>
 
-  <!-- Apply for UI/UX Internship Section -->
+  <!-- Apply for AI/ML Internship Section -->
   <div class="max-w-4xl mx-auto p-8 border border-black rounded-lg shadow-lg mt-20">
     <div class="text-center">
-      <h1 class="text-3xl font-bold">Applying for UI/UX Designer Internship</h1>
+      <h1 class="text-3xl font-bold">Applying for AL/ML Designer Internship</h1>
       <p class="text-gray-600">Genex Corporate Service PVT.LTD</p>
     </div>
 
@@ -118,7 +118,17 @@
       <!-- Assessment Section -->
       <div>
         <label class="block text-lg font-medium" for="assessment">Assessment<span class="text-red-500">*</span></label>
-        <h2 class="text-xl font-semibold">Q1. Please share your Behance/Dribble portfolio</h2>
+        <h2 class="text-xl font-semibold">Q1. Describe your experience with any AI/ML frameworks. Can you detail a project where you applied one of these frameworks?</h2>
+        <p class="text-gray-500 text-sm">If you want to share any documents or files, upload them on 
+          <a href="https://drive.google.com" class="text-blue-600 underline" target="_blank">Google Drive</a> or 
+          <a href="https://www.dropbox.com" class="text-blue-600 underline" target="_blank">Dropbox</a> and paste the public link in the answer.
+        </p>
+        <textarea id="coverLetter" class="w-full border border-gray-300 p-2 rounded-lg mt-2" rows="4" placeholder="Enter your text here" required></textarea>
+      </div>
+
+      <div>
+        <h2 class="text-xl font-semibold">Q2. How do you stay updated with the latest advancements in AI/ML?
+            Can you discuss a recent AI breakthrough that interests you?</h2>
         <p class="text-gray-500 text-sm">If you want to share any documents or files, upload them on 
           <a href="https://drive.google.com" class="text-blue-600 underline" target="_blank">Google Drive</a> or 
           <a href="https://www.dropbox.com" class="text-blue-600 underline" target="_blank">Dropbox</a> and paste the public link in the answer.
