some changeses occured

--- a/service.html
+++ b/service.html
@@ -82,100 +82,103 @@
     </section>
 
     <!-- services -->
+    <section>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Card 1 -->
+            <div class="bg-white shadow-lg rounded-lg p-6 ">
+                <img src="/assets/Devops.jpeg" alt="DevOps Development"
+                    class="w-full h-40 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-gray-800 mb-2">DevOps Development</h2>
+                <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
+                    solutions.
+                    we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
+                    success.</p>
+                <button class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">Learn more</button>
+            </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Card 1 -->
-        <div class="bg-white shadow-lg rounded-lg p-6 ">
-            <img src="/assets/Devops.jpeg" alt="DevOps Development" class="w-full h-40 object-cover rounded-md mb-4">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2">DevOps Development</h2>
-            <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
-                solutions.
-                we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
-                success.</p>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Learn more</button>
-        </div>
+            <!-- Card 2 -->
+            <div class="bg-white shadow-lg rounded-lg p-6">
+                <img src="/assets/Devops.jpeg" alt="Splunk Development"
+                    class="w-full h-40 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-gray-800 mb-2">Splunk Development</h2>
+                <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
+                    solutions.
+                    we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
+                    success.</p>
+                <button class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">Learn more</button>
+            </div>
 
-        <!-- Card 2 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-            <img src="/assets/Devops.jpeg" alt="Splunk Development" class="w-full h-40 object-cover rounded-md mb-4">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2">Splunk Development</h2>
-            <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
-                solutions.
-                we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
-                success.</p>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Learn more</button>
-        </div>
+            <!-- Card 3 -->
+            <div class="bg-white shadow-lg rounded-lg p-6">
+                <img src="/assets/fullstack.jpeg" alt="FullStack Development"
+                    class="w-full h-40 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-gray-800 mb-2">FullStack Development</h2>
+                <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
+                    solutions.
+                    we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
+                    success.</p>
+                <button class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">Learn more</button>
+            </div>
 
-        <!-- Card 3 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-            <img src="/assets/fullstack.jpeg" alt="FullStack Development"
-                class="w-full h-40 object-cover rounded-md mb-4">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2">FullStack Development</h2>
-            <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
-                solutions.
-                we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
-                success.</p>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Learn more</button>
-        </div>
+            <!-- Card 4 -->
+            <div class="bg-white shadow-lg rounded-lg p-6">
+                <img src="/assets/web-dev.png" alt="Web Development" class="w-full h-40 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-gray-800 mb-2">Web Development</h2>
+                <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
+                    solutions.
+                    we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
+                    success.
+                </p>
+                <button class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">Learn more</button>
+            </div>
 
-        <!-- Card 4 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-            <img src="/assets/web-dev.png" alt="Web Development" class="w-full h-40 object-cover rounded-md mb-4">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2">Web Development</h2>
-            <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
-                solutions.
-                we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
-                success.
-            </p>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Learn more</button>
-        </div>
+            <!-- Card 5 -->
+            <div class="bg-white shadow-lg rounded-lg p-6">
+                <img src="/assets/chatbot.png" alt="ChatBot Development"
+                    class="w-full h-40 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-gray-800 mb-2">ChatBot Development</h2>
+                <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
+                    solutions.
+                    we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
+                    success.
+                </p>
+                <button class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">Learn more</button>
+            </div>
 
-        <!-- Card 5 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-            <img src="/assets/chatbot.png" alt="ChatBot Development" class="w-full h-40 object-cover rounded-md mb-4">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2">ChatBot Development</h2>
-            <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
-                solutions.
-                we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
-                success.
-            </p>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Learn more</button>
-        </div>
+            <!-- Card 6 -->
+            <div class="bg-white shadow-lg rounded-lg p-6">
+                <img src="/assets/servicenow.jpeg" alt="ServiceNow Development"
+                    class="w-full h-40 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-gray-800 mb-2">ServiceNow Development</h2>
+                <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
+                    solutions.
+                    we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
+                    success.</p>
+                <button class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">Learn more</button>
+            </div>
 
-        <!-- Card 6 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-            <img src="/assets/servicenow.jpeg" alt="ServiceNow Development"
-                class="w-full h-40 object-cover rounded-md mb-4">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2">ServiceNow Development</h2>
-            <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
-                solutions.
-                we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
-                success.</p>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Learn more</button>
-        </div>
+            <!-- Card 7 -->
+            <div class="bg-white shadow-lg rounded-lg p-6">
+                <img src="/assets/Devops.jpeg" alt="AWS Development" class="w-full h-40 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-gray-800 mb-2">AWS Development</h2>
+                <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
+                    solutions.
+                    we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
+                    success.</p>
+                <button class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">Learn more</button>
+            </div>
 
-        <!-- Card 7 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-            <img src="/assets/Devops.jpeg" alt="AWS Development" class="w-full h-40 object-cover rounded-md mb-4">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2">AWS Development</h2>
-            <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
-                solutions.
-                we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
-                success.</p>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Learn more</button>
+            <!-- Card 8 -->
+            <div class="bg-white shadow-lg rounded-lg p-6">
+                <img src="/assets/ui-ux.jpeg" alt="UI/UX Designer" class="w-full h-40 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-gray-800 mb-2">UI/UX Designer</h2>
+                <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
+                    solutions.
+                    we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
+                    success.</p>
+                <button class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">Learn more</button>
+            </div>
         </div>
-
-        <!-- Card 8 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-            <img src="/assets/ui-ux.jpeg" alt="UI/UX Designer" class="w-full h-40 object-cover rounded-md mb-4">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2">UI/UX Designer</h2>
-            <p class="text-gray-600 mb-4"> streamline your development and operations with our comprehensive DevOps
-                solutions.
-                we integrate automation and continuous delivery to enhance efficiency and accelerate your project's
-                success.</p>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Learn more</button>
-        </div>
-    </div>
     </section>
 
     <!-- Contact Us Section -->
