CONSULTING AREA page section completed

--- a/index.html
+++ b/index.html
@@ -338,6 +338,33 @@
     </form>
 </section>
 
+<!-- CONSULTING AREA -->
+<section class="py-12 bg-gray-100">
+  <h2 class="text-3xl text-center font-bold mb-10">TECHNOLOGY CONSULTING ARENA</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 max-w-6xl mx-auto place-items-center">
+    <div class="flex justify-center items-center border w-32 h-32">
+      <img src="/assets/qlik-vector.png" alt="Qlik" class="w-24">
+    </div>
+    <div class="flex justify-center items-center border w-32 h-32">
+      <img src="/assets/hive-logo.png" alt="Hive" class="w-24">
+    </div>
+    <div class="flex justify-center items-center border w-32 h-32">
+      <img src="/assets/Tableau-Logo.png" alt="Tableau" class="w-24">
+    </div>
+    <div class="flex justify-center items-center border w-32 h-32">
+      <img src="/assets/SAP_NetWeaver.png" alt="SAP NetWeaver" class="w-24">
+    </div>
+    <div class="flex justify-center items-center border w-32 h-32">
+      <img src="/assets/informatica.png" alt="Informatica" class="w-24">
+    </div>
+    <div class="flex justify-center items-center border w-32 h-32">
+      <img src="/assets/cloudera.png" alt="Cloudera" class="w-24">
+    </div>
+  </div>
+</section>
+
+
+<!-- footer section -->
 <footer class="text-white py-10">
     <!-- First Row - Logo -->
     <div class="flex justify-center mb-8">
